# DemoScene

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
project/: CMakeLists.txt  main.cpp
project/include/: Camera.hpp  CameraFreeFly.hpp  Cube.hpp  DemoScene.hpp  Planet.hpp  Program.hpp  Shader.hpp  Skybox.hpp
project/include/lights/: DirectionalLight.hpp  PointLight.hpp  SpotLight.hpp
project/resources/textures/: terre.tga  test.tga
project/src/: Camera.cpp  Cube.cpp  DemoScene.cpp  Planet.cpp  Program.cpp  Shader.cpp  Skybox.cpp  simplexnoise.cpp
project/src/shaders/: actor.frag  actor.vert  directionalLight.frag  planet.frag  planet.vert  pointLight.frag  pointLight.vert  shadowCubeMap.frag  shadowCubeMap.geom  shadowCubeMap.vert  shadowMap.vert  simple.frag  simple.vert  skybox.frag  skybox.vert  spotLight.frag
